--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,12 +37,10 @@
     "*.d.ts",
     "node_modules/",
     "*.generated.ts",
-    "coverage"
+    "coverage",
+    "!.projenrc.ts"
   ],
   "rules": {
-    "@typescript-eslint/no-require-imports": [
-      "error"
-    ],
     "indent": [
       "off"
     ],
@@ -120,12 +118,35 @@
     "@typescript-eslint/member-delimiter-style": [
       "error"
     ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "max-len": [
+      "error",
+      {
+        "code": 150,
+        "ignoreUrls": true,
+        "ignoreStrings": true,
+        "ignoreTemplateLiterals": true,
+        "ignoreComments": true,
+        "ignoreRegExpLiterals": true
+      }
+    ],
+    "quote-props": [
+      "error",
+      "consistent-as-needed"
+    ],
+    "@typescript-eslint/no-require-imports": [
+      "error"
+    ],
     "import/no-extraneous-dependencies": [
       "error",
       {
         "devDependencies": [
           "**/test/**",
-          "**/build-tools/**"
+          "**/build-tools/**",
+          ".projenrc.ts"
         ],
         "optionalDependencies": false,
         "peerDependencies": true
@@ -159,27 +180,8 @@
     "key-spacing": [
       "error"
     ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "quote-props": [
-      "error",
-      "consistent-as-needed"
-    ],
     "no-multiple-empty-lines": [
       "error"
-    ],
-    "max-len": [
-      "error",
-      {
-        "code": 150,
-        "ignoreUrls": true,
-        "ignoreStrings": true,
-        "ignoreTemplateLiterals": true,
-        "ignoreComments": true,
-        "ignoreRegExpLiterals": true
-      }
     ],
     "@typescript-eslint/no-floating-promises": [
       "error"
