--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
-  "name": "eslint-plugin-cdk-security",
+  "name": "eslint-plugin-awscdk",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/corymhall/eslint-plugin-awscdk"
+  },
   "scripts": {
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
     "test": "npx projen test",
     "build": "npx projen build",
-    "bump": "npx projen bump",
-    "release": "npx projen release",
     "test:watch": "npx projen test:watch",
     "test:update": "npx projen test:update",
-    "projen:upgrade": "npx projen projen:upgrade",
+    "upgrade": "npx projen upgrade",
+    "upgrade-projen": "npx projen upgrade-projen",
     "watch": "npx projen watch",
     "package": "npx projen package",
     "eslint": "npx projen eslint",
-    "projen": "npx projen",
-    "start": "npx projen start"
+    "default": "npx projen default",
+    "projen": "npx projen"
   },
   "devDependencies": {
-    "@types/eslint": "^7.2.7",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^10.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@types/eslint": "^7.28.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^14.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
-    "eslint-import-resolver-node": "^0.3.4",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.6.3",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.24.2",
+    "jest": "^27.2.1",
     "jest-junit": "^12",
     "json-schema": "^0.3.0",
-    "projen": "^0.17.17",
-    "standard-version": "^9",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "npm-check-updates": "^11",
+    "projen": "^0.28.21",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^9",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@typescript-eslint/experimental-utils": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.22.0"
+    "@typescript-eslint/experimental-utils": "^4.31.2",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0"
   },
   "bundledDependencies": [],
   "main": "lib/index.js",
