--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "build": "npx projen build",
     "test:watch": "npx projen test:watch",
     "test:update": "npx projen test:update",
+    "bump": "npx projen bump",
+    "unbump": "npx projen unbump",
+    "publish:github": "npx projen publish:github",
+    "publish:npm": "npx projen publish:npm",
     "upgrade": "npx projen upgrade",
     "upgrade-projen": "npx projen upgrade-projen",
     "watch": "npx projen watch",
     "package": "npx projen package",
     "eslint": "npx projen eslint",
     "default": "npx projen default",
+    "release": "npx projen release",
     "projen": "npx projen"
   },
   "devDependencies": {
@@ -35,6 +40,7 @@
     "json-schema": "^0.3.0",
     "npm-check-updates": "^11",
     "projen": "^0.28.21",
+    "standard-version": "^9",
     "ts-jest": "^27.0.5",
     "ts-node": "^9",
     "typescript": "^4.4.3"
