--- a/package.json
+++ b/package.json
@@ -5,58 +5,57 @@
     "url": "https://github.com/corymhall/eslint-plugin-awscdk"
   },
   "scripts": {
+    "build": "npx projen build",
+    "bump": "npx projen bump",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
-    "test:compile": "npx projen test:compile",
+    "default": "npx projen default",
+    "eject": "npx projen eject",
+    "eslint": "npx projen eslint",
+    "package": "npx projen package",
+    "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
+    "pre-compile": "npx projen pre-compile",
+    "release": "npx projen release",
     "test": "npx projen test",
-    "build": "npx projen build",
     "test:watch": "npx projen test:watch",
-    "test:update": "npx projen test:update",
-    "bump": "npx projen bump",
     "unbump": "npx projen unbump",
-    "publish:github": "npx projen publish:github",
-    "publish:npm": "npx projen publish:npm",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
-    "package": "npx projen package",
-    "eslint": "npx projen eslint",
-    "default": "npx projen default",
-    "release": "npx projen release",
     "projen": "npx projen"
   },
   "devDependencies": {
-    "@types/eslint": "^7.28.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^14.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "eslint": "^7.32.0",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.24.2",
-    "jest": "^27.2.4",
-    "jest-junit": "^12",
-    "json-schema": "^0.3.0",
-    "npm-check-updates": "^11",
-    "projen": "^0.28.33",
+    "@types/eslint": "^7.29.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^14",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "eslint": "^8",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^27.5.1",
+    "jest-junit": "^13",
+    "json-schema": "^0.4.0",
+    "npm-check-updates": "^16",
+    "projen": "^0.67.13",
     "standard-version": "^9",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^9",
-    "typescript": "^4.4.3"
+    "ts-jest": "^27.1.5",
+    "ts-node": "^10",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@typescript-eslint/experimental-utils": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/utils": "^5.49.0",
     "eslint": "^7.32.0"
   },
-  "bundledDependencies": [],
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
   "jest": {
     "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -64,6 +63,7 @@
       "json",
       "lcov",
       "clover",
+      "cobertura",
       "text"
     ],
     "coverageDirectory": "coverage",
@@ -88,7 +88,7 @@
     "preset": "ts-jest",
     "globals": {
       "ts-jest": {
-        "tsconfig": "tsconfig.jest.json"
+        "tsconfig": "tsconfig.dev.json"
       }
     }
   },
